--- a/app/src/main/res/layout/item_view_layout.xml
+++ b/app/src/main/res/layout/item_view_layout.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
+    android:layout_marginTop="5dp"
+    android:layout_marginBottom="5dp"
     android:layout_height="80dp"
     >
 
@@ -8,27 +10,25 @@
     <ImageView
         android:id="@+id/item_icon"
         android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginBottom="1dp"
+        android:layout_height="72dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:contentDescription="icon"
         android:src="@mipmap/ic_launcher"
-        />
+        android:layout_marginStart="22dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true" />
 
     <!-- title -->
     <TextView
         android:id="@+id/item_title"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/item_icon"
-        android:layout_alignBaseline="@+id/item_icon"
         android:textColor="@android:color/darker_gray"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
-        android:textSize="22dp" />
+        android:textSize="15dp"
+        android:layout_centerVertical="true"
+        android:layout_toEndOf="@+id/item_icon" />
 
 </RelativeLayout>
